UPDATE code at full width to ensure it doesnt overflow

--- a/app/styles/components/code.css
+++ b/app/styles/components/code.css
@@ -27,6 +27,7 @@
 
     .shiki-wrapper[data-width="full"] pre {
             width: fit-content;
+            max-width: 100%;
         }
 
     @media (max-width: 768px) {
